--- a/styles/sass/3-basics/_base.scss
+++ b/styles/sass/3-basics/_base.scss
@@ -7,8 +7,7 @@
 .blog-wrapper{
     max-width: 700px;
     width: 100%;
-    margin: 0 auto;
-    border: 1px solid orangered;
+    margin: 0 auto
 }
 
 a{
